--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<title>Firts Project</title>
 </head>
 <body>
-	
+	<div class="masthead"><img src="img/bg_img.jpg" alt="bg_img"></div>
 </body>
 </html>
